--- a/views/tasks.html
+++ b/views/tasks.html
@@ -31,7 +31,7 @@
             <ul class="list-group list-group-flush">
                 {% for task in list.tasks %}
                 <li class="list-group-item d-flex align-items-center task hide-buttons" data-id="{{ task.id }}" data-title="{{ task.title }}" data-description="{{ task.description }}">
-                    <div class="custom-control custom-checkbox flex-grow-1">
+                    <div class="custom-control custom-checkbox flex-grow-1 text-truncate">
                         <input type="checkbox" class="custom-control-input task-checkbox" id="task{{ list.id }}_{{ task.id }}" data-check="{% if task.isDone %}" checked="{% endif %}">
                         <label class="custom-control-label" for="task{{ list.id }}_{{ task.id }}">{{ task.title }}</label>
                     </div>
